ajust  conflicts 11-06 22-37